--- a/k8s/petclinic_chart/templates/api-gateway-ingress.yaml
+++ b/k8s/petclinic_chart/templates/api-gateway-ingress.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: '{{ .values.dns_name }}'
+    - host: '{{ .Values.DNS_NAME }}'
       http:
         paths:
           - backend:
